# there-will-be-blood

./: .gitignore  CMakeLists.txt  README.md  There will not be blood.jucer  plugin.cfg
Source/: LevelMeter.cpp  LevelMeter.h  LookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h
source/: CustomLookAndFeel.h  LevelMeter.cpp  LevelMeter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h
src/: CustomLookAndFeel.h  LevelMeter.cpp  LevelMeter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
